# current

./: .gitignore  MANIFEST.in  README.rst  current.py  pyproject.toml  requirements.txt  run-tests.py  setup.cfg  setup.py
.github/workflows/: build.yaml
current/: __init__.py
tests/: test_current.py
tests/spam/: spam.py
tests/spam/eggs/: eggs.py
