[project]
name = "current"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Current module relative paths and imports"
keywords = ["sys.path", "import", "temporary", "inspect", "caller"]
readme = "README.rst"
license = "CC0-1.0"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/xflr6/current"
Changelog = "https://github.com/xflr6/current/blob/master/README.rst#changelog"
"Issue Tracker" = "https://github.com/xflr6/current/issues"
CI = "https://github.com/xflr6/current/actions"
Coverage = "https://codecov.io/gh/xflr6/current"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "current.__version__" }

[tool.setuptools.package-data]
current = ["py.typed"]

[dependency-groups]
dev = [  # $ pip install -e . --group dev
  "build",
  "tox",
  "twine",
  "wheel",
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
lint = [
  "flake8",
  "Flake8-pyproject",
  "pep8-naming",
]
test = [
  "coverage",
  "pytest>=8",
  "pytest-cov",
]
typing = [
  "mypy",
]

[tool.mypy]
packages = ["current"]
strict = true

[tool.flake8]
exclude = [".tox"]
ignore = ["E126", "E128"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["current"]
branch = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["python", "-X", "dev", "run-tests.py", { replace = "posargs", extend = true }]]
