[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths = tests
addopts =
  --doctest-glob='*.rst'
  --doctest-modules
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = current
branch = false

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = .tox
